@@ -20,6 +20,7 @@ Fixed bugs
 - fixed memory allocation when adding strong SBCs for enclosing orbit of symmetric subgroups (disabled by default)
 - free paths of branch-and-bound tree iteratively instead of recursively to avoid stack overflow
 - fixed rare invalid memory access when collecting symmetry information for indicator constraints
+- recompute activity bounds before checking infeasibility and redundancy in linear constraint presolving
 
 Build system
 ------------
